[gd_scene load_steps=25 format=3 uid="uid://d04wc2xd0evxd"]

[ext_resource type="Script" uid="uid://d3a6wdn8vtdyi" path="res://Ui/Popups/game_end_popup.gd" id="1_yfwdu"]
[ext_resource type="Texture2D" uid="uid://c7tco241pp6wg" path="res://Art/BubbeBounce_WinScreen.png" id="2_bl6he"]
[ext_resource type="AudioStream" uid="uid://drrfqnhjy4eib" path="res://Ui/Popups/LoseWinSounds/Grieving_Capybara_01-001.wav" id="2_yjmyh"]
[ext_resource type="Texture2D" uid="uid://bebrwskvttl45" path="res://Art/BubbeBounce_Continue_scaled.png" id="3_mgjmm"]
[ext_resource type="AudioStream" uid="uid://cdl4vk6is7060" path="res://Ui/Popups/LoseWinSounds/Grieving_Capybara_01-002.wav" id="3_pc8l5"]
[ext_resource type="Texture2D" uid="uid://dth7wggymsdvo" path="res://Art/BubbeBounce_ContinueHover_scaled.png" id="4_ax28a"]
[ext_resource type="AudioStream" uid="uid://dy20plvml7676" path="res://Ui/Popups/LoseWinSounds/Grieving_Capybara_01-003.wav" id="4_mp67x"]
[ext_resource type="Texture2D" uid="uid://byfhen62btbhr" path="res://Art/BubbeBounce_BackToMenu_scaled.png" id="5_eucqn"]
[ext_resource type="AudioStream" uid="uid://2ke6011gqbli" path="res://Ui/Popups/LoseWinSounds/Grieving_Capybara_01-004.wav" id="5_gw7je"]
[ext_resource type="Texture2D" uid="uid://bnqx1xdhg752w" path="res://Art/BubbeBounce_BackToMenuHover_scaled.png" id="6_xq8sd"]
[ext_resource type="AudioStream" uid="uid://djwg7hkeuppk3" path="res://Ui/Popups/LoseWinSounds/Happy_Capybara_01-250125_2130-001.wav" id="6_ytwqb"]
[ext_resource type="Texture2D" uid="uid://bs662dgjwc7q1" path="res://Art/BubbeBounce_LoseScreen.png" id="7_b32i0"]
[ext_resource type="AudioStream" uid="uid://c1bewv51nrg7f" path="res://Ui/Popups/LoseWinSounds/Happy_Capybara_01-250125_2130-002.wav" id="7_exlv5"]
[ext_resource type="AudioStream" uid="uid://xd1djx2phhtd" path="res://Ui/Popups/LoseWinSounds/Happy_Capybara_01-250125_2130-003.wav" id="8_6df44"]
[ext_resource type="AudioStream" uid="uid://bgmavau55mcuu" path="res://Ui/Popups/LoseWinSounds/Happy_Capybara_01-250125_2130-004.wav" id="9_mgjmm"]
[ext_resource type="AudioStream" uid="uid://csmnxufirlokc" path="res://Ui/Popups/LoseWinSounds/Happy_Capybara_01-250125_2130-005.wav" id="10_ax28a"]
[ext_resource type="AudioStream" uid="uid://djf8bx2jgjome" path="res://Ui/Popups/LoseWinSounds/Happy_Capybara_01-250125_2130-006.wav" id="11_eucqn"]
[ext_resource type="Texture2D" uid="uid://ys4mt238443v" path="res://Art/BubbeBounce_TryAgain_scaled.png" id="17_b32i0"]
[ext_resource type="Texture2D" uid="uid://cyko4741ylrmn" path="res://Art/BubbeBounce_TryAgainHover_scaled.png" id="18_f5j8o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bl6he"]
texture = ExtResource("2_bl6he")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f5j8o"]
texture = ExtResource("7_b32i0")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ytwqb"]
streams_count = 4
stream_0/stream = ExtResource("2_yjmyh")
stream_1/stream = ExtResource("3_pc8l5")
stream_2/stream = ExtResource("4_mp67x")
stream_3/stream = ExtResource("5_gw7je")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_exlv5"]
streams_count = 6
stream_0/stream = ExtResource("6_ytwqb")
stream_1/stream = ExtResource("7_exlv5")
stream_2/stream = ExtResource("8_6df44")
stream_3/stream = ExtResource("9_mgjmm")
stream_4/stream = ExtResource("10_ax28a")
stream_5/stream = ExtResource("11_eucqn")

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_6df44"]
clip_count = 2
clip_0/name = &""
clip_0/stream = SubResource("AudioStreamRandomizer_ytwqb")
clip_0/auto_advance = 0
clip_1/name = &""
clip_1/stream = SubResource("AudioStreamRandomizer_exlv5")
clip_1/auto_advance = 0

[node name="GameEndPopup" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfwdu")

[node name="WinContent" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bl6he")

[node name="HBoxContainer" type="HBoxContainer" parent="WinContent"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -402.0
offset_top = -259.0
offset_right = 402.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="NextLevelButton" type="TextureButton" parent="WinContent/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_mgjmm")
texture_hover = ExtResource("4_ax28a")

[node name="BackToMenuButton" type="TextureButton" parent="WinContent/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_eucqn")
texture_hover = ExtResource("6_xq8sd")

[node name="LoseContent" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_f5j8o")

[node name="HBoxContainer" type="HBoxContainer" parent="LoseContent"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -402.0
offset_top = -259.0
offset_right = 402.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TryAgainButton" type="TextureButton" parent="LoseContent/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("17_b32i0")
texture_hover = ExtResource("18_f5j8o")

[node name="BackToMenuButton" type="TextureButton" parent="LoseContent/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_eucqn")
texture_hover = ExtResource("6_xq8sd")

[node name="game_end_emitter" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamInteractive_6df44")
